# GameOfLife

./: .gitignore  README.md  config.py  main.py  program.py  pyproject.toml  test.py
logs/: info.log.1  info.log.10  info.log.2  info.log.3  info.log.4  info.log.5  info.log.6  info.log.7  info.log.8  info.log.9
src/: board.py  rules.py  status.py
