[tool.poetry]
name = "gameoflife"
version = "0.1.0"
description = "game of life simple implementation"
authors = ["Andrea Guzzo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
numpy = "^1.20.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
bandit = "^1.7.0"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
